--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,122 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+  font-family: sans-serif;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #333;
+  background-color: #fff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --hover-color: #f8f8f8;
+  --select-color: #eee;
+  --border-color: #ddd;
+  --border-style: 1px solid var(--border-color);
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  box-sizing: border-box;
 }
 
+html,
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  padding: 0;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  padding: 0.25em 0.5em;
+  font-size: inherit;
+  background-color: transparent;
+  border: none;
+  border-radius: 4px;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+button:hover {
+  background-color: var(--hover-color);
+}
+
+.container {
+  margin: 40px auto;
+  width: 70%;
+  min-width: 600px;
+  max-width: 1400px;
+}
+
+.download-table {
+  border: var(--border-style);
+  overflow: auto;
+}
+
+.download-table .header {
+  display: flex;
+  align-items: baseline;
+  padding: 0.8em 0;
+  font-size: 1.25em;
+}
+
+.download-table .header > *:not(:last-child) {
+  margin-right: 2em;
+}
+
+.download-table table {
+  width: 100%;
+  border-collapse: collapse;
+  border-top: var(--border-style);
+}
+
+.download-table table th,
+.download-table table td {
+  padding: 0.8em;
+  text-align: left;
+  border-bottom: var(--border-style);
+}
+
+.download-table tbody tr:last-child td {
+  border-bottom: none;
+}
+
+.download-table table th {
+  font-size: 1.1em;
+  font-weight: normal;
+}
+
+.download-table table td {
+  font-size: 0.9em;
+}
+
+/* Align select-all with table checkboxes */
+.download-table .header .select-all,
+.download-table table th:first-child,
+.download-table table td:first-child {
+  padding-left: 15px;
+}
+
+/* Row hover/select */
+
+.download-table table tbody tr {
+  cursor: pointer;
+}
+
+.download-table table tbody tr:hover td {
+  background-color: var(--hover-color);
+}
+
+/* Status Cell */
+
+.status-cell {
+  display: flex;
+  align-items: center;
+}
+
+.status-cell .available-dot {
+  --dot-size: 1.2em;
+  margin-left: 0.5em;
+  width: var(--dot-size);
+  height: var(--dot-size);
+  border-radius: var(--dot-size);
+  background-color: #5eba7d;
 }
